# Test_JsonParse

./: .gitignore  CMakeLists.txt  classes_prototypes.hpp  console_game.cpp  inventory.json  main.cpp  modificators.json  parse_functions.cpp  print_messages.cpp  protection.json  read_game_objects.cpp  start_pasing.cpp  test.json
json_files/: modifiers.json
